--- a/keras_wide_deep.ipynb
+++ b/keras_wide_deep.ipynb
@@ -474,7 +474,94 @@
         "colab": {}
       },
       "source": [
-        ""
+        "#Deep model feature: word embeddings of wine description\n",
+        "train_embed = tokenize.texts_to_sequences(description_train)\n",
+        "test_embed = tokenize.texts_to_sequences(description_test)\n",
+        "\n",
+        "max_seq_length = 170\n",
+        "train_embed = keras.preprocessing.sequence.pad_sequence(\n",
+        "    train_embed,maxlen=max_seq_length,padding=\"post\")\n",
+        "test_embed = keras.preprocessing.sequence.pad_sequence(\n",
+        "    test_embed,maxlen=max_seq_length,padding=\"post\")\n",
+        "\n"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "-SX-FR7yUAUG",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "#define our deep model with the functional Api\n",
+        "deep_inputs = layers.Input(shape=(max_seq_length,))\n",
+        "embedding = layers.Embedding(vocab_size, 8 , input_length=max_seq_length)(deep_inputs)\n",
+        "embedding = layers.Flatten()(embedding)\n",
+        "embed_out = layers.Dense(1)(embedding)\n",
+        "deep_model = keras.Model(inputs=deep_inputs, outputs=embed_out)\n",
+        "print(deep_model.summary())"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "H_F0L8d0VHuD",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "deep_model.compile(loss='mse',optimizer='adam',metrics['accuracy'])"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "fJfHV-LxVUsq",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "#Combine wide and deep into one model\n",
+        "merged_out = layers.concatenate([wide_model.output, deep_model.output])\n",
+        "merged_out = layers.Dense(1)(merged_out)\n",
+        "combined_model = keras.Model(wide_model.input + [deep_model.input],merged_out)\n",
+        "print(combined_model.summary())\n",
+        "\n",
+        "combined_model.compile(loss='mse',optimizer='adam',metrics=['accuracy'])"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "nu6PKGaCWJc4",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "#Run training\n",
+        "combined_model.fit([description_bow_train,variety_train] + [train_embed],labels_train,epochs=10, batch_size=128)\n"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "BP9RIU76WbZX",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "combined_model.fit([description_bow_test,variety_test] + [test_embed],labels_test,epochs=10, batch_size=128)\n"
       ],
       "execution_count": 0,
       "outputs": []
