--- a/keras_wide_deep.ipynb
+++ b/keras_wide_deep.ipynb
@@ -565,6 +565,55 @@
       ],
       "execution_count": 0,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "n4MwlgEjW822",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "#Generate Prediction\n",
+        "predictions = combined_model.predict([description_bow_test,variety_test] + [test_embed])"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "0S5z2TUeXSub",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "#Compare prediction with actual values for the first time few times in our test dataset\n",
+        "num_predictions = 40\n",
+        "diff = 0\n",
+        "\n",
+        "for i in range(num_predictions):\n",
+        "  val= predictions[i]\n",
+        "  print(description_test.iloc[i])\n",
+        "  print('Predicted:',val[0],'Actual: ',labels_test.iloc[i], '\\n')\n",
+        "  diff += abs(val[0] - labels_test.iloc[i])"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "OPK4Y_AfYAzq",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "#compare the average difference between actual price and the model's predicted price\n",
+        "print('Average predicton difference:', diff / num_predictions)"
+      ],
+      "execution_count": 0,
+      "outputs": []
     }
   ]
 }
